# cpp-methodology

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cpp_methodology.sln  example.sln  example.vcxproj  example.vcxproj.filters  main.cpp
src/: CMakeLists.txt  main.cpp
src/abstraction/clean_code/dependency_inversion_principle/: ConcreteA.h  Interface.h
src/abstraction/clean_code/liskov_substitution_principle/: liskov_substitution_principle_geometry_compliant.h  liskov_substitution_principle_geometry_violation.h
src/abstraction/clean_code/open_closed_principle/: open_closed_principle_geometry_compliant.h  open_closed_principle_payment_compliant.h
src/abstraction/design_patterns/: builder.h  observer.h
src/algorithms/: BinarySearch.h
src/algorithms/binary_tree/: binary_tree.cpp  binary_tree_node.h
src/basic/containers/: Iterator.h  MyContainer.h
src/basic/elements/: MoveCopy.h  OverloadingOperators.h
src/basic/internals/: HashMap.h  SharedPtr.h
src/boost/: TCPServer.h
src/clean_code/case_study/ocp_writer/: keyboard.h  printer.h
src/clean_code/dependency_inversion/: Keyboard.h  Printer.h  Worker.h  i_reader.h
src/clean_code/dependency_inversion_principle/: AbstractCompliance.h  AbstractViolation.h  ConcreteB.h
src/clean_code/interface_segregation_principle/: interface_segregation_principle_violation.h
src/clean_code/open_close_principle/: Expense.h  ExpenseNamer.h  ExpenseReport.h  ExpenseReporter.h  IExpense.h  IReportPrinter.h  ReportPrinter.h  expense.h  expense_namer.h  expense_report.h  i_report_printer.h  report_printer.h
src/clean_code/open_closed_principle/: open_closed_principle_geometry_solution.h  open_closed_principle_geometry_violation.h  open_closed_principle_payment.h  open_closed_principle_payment_violation.h
src/clean_code/single_responsibility_principle/: single_responsibility_principle.h
src/clean_code/tdd/: BowlingGame.h
src/containers/: IStack.h  MyContainer.h  StackElement.h  linked_list.h  my_container.h  queue_from_c_array.cpp  queue_from_c_array.h  queue_from_shared_pointer.h  queue_from_vector.h  stack_element.h  stack_from_vector.h
src/cpp_basic_constructs/: TypeConversions.h  mutable.h  overloading_operators.h  template.h
src/cpp_internals/: UniquePtr.h
src/cpp_language/basics/: move_copy_semantics.h  type_conversions.h
src/cpp_language/files/: trie.h
src/cpp_language/internals/: shared_ptr.h
src/design_patterns/: ObserverBoostSignal.h  Singleton.h  adapter.h  observer_boost_signal.h
src/dsa/algorithms/sort/: insertion_sort.h
src/dsa/data_structures/: graph_cycle_detection.h  lru.h
src/dsa/data_structures/cache/: lru.h
src/dsa/data_structures/deque/: deque.h
src/dsa/data_structures/graph/: graph_cycle_detection.h
src/dsa/data_structures/hash_table/: hash_table.h
src/dsa/data_structures/list/: forward_list.h  linked_list_p.h
src/dsa/data_structures/queue/: i_queue.h
src/dsa/data_structures/stack/: stack.cpp  stack.h  stack_from_deque.h
src/dsa/data_structures/tree/: binary_tree.h
src/leet_code/: FrequencySort.h  UniqueNames.h  character_filter.h  fibonacci.h  frequency_sort.h  reverse_string.h  sliding_window.h  unique_characters.h  unique_names.h
src/oop_paradigms/: my_class.h  person.h  polymorphism.h
tst/: CMakeLists.txt
tst/abstraction/clean_code/: liskov_substitution_principle_geometry_test.cpp  open_closed_principle_geometry_test.cpp  open_closed_principle_payment_test.cpp
tst/abstraction/design_patterns/: adapter.cpp  builder.cpp  decorator.cpp  observer.cpp
tst/abstraction/oop_paradigms/: class.cpp
tst/algorithms/: BinarySearchUT.cpp  BinaryTreeUT.cpp  BubbleSortUT.cpp  InsertionSortUT.cpp  MergeSortUT.cpp  QuickSortUT.cpp  SelectionSortUT.cpp  ShuffleUT.cpp  binary_search.cpp  merge_sort.cpp  quitck_sort.cpp  selection_sort.cpp  shuffle.cpp
tst/basic/containers/: ForwardListUT.cpp  IteratorUT.cpp  PriorityQueueUT.cpp  StackUT.cpp
tst/basic/elements/: MoveCopyUT.cpp  OverloadingOperatorsUT.cpp  SmartpointerUsageUT.cpp
tst/basic/internals/: SharedPtrUT.cpp  UniquePtrUT.cpp
tst/basic/parallel/: AtomicUT.cpp  MutexGuardThreadUT.cpp  atomicUT.cpp
tst/clean_code/: open_closed_principle_payment_test.cpp
tst/clean_code/case_study/: bowling_game.cpp  worker.cpp
tst/containers/: ArrayUT.cpp  ForwardListUT.cpp  QueueUT.cpp  array.cpp  iterator.cpp  linked_list.cpp  list.cpp  priority_queue.cpp  queue.cpp  set.cpp
tst/cpp_basic_constructs/: MoveCopySemanticsUT.cpp  OverloadingOperatorsUT.cpp  move_copy_semantics.cpp  mutable.cpp  oOverloading_operators.cpp  smartpointer_usage.cpp  template.cpp  type_conversions.cpp
tst/cpp_internals/: HashMapUT.cpp  hash_map.cpp  shared_ptr.cpp
tst/cpp_language/internals/: unique_ptr.cpp
tst/cpp_language/modern/: span.cpp
tst/cpp_language/parallel_programming/: atomic.cpp  unique_lock.cpp
tst/cpp_language/synchronization_problems/: deadlock.cpp  race_condition.cpp
tst/cpp_modern/: VariantUT.cpp  find.cpp  lambda.cpp  ranges.cpp  rangesUT.cpp  variant.cpp
tst/dangerous_constructions/: StringViewUT.cpp  string_view.cpp
tst/design_patterns/: AdapterUT.cpp  BuilderUT.cpp  FacadeUT.cpp  FactoryUT.cpp  ObserverBoostSignalUT.cpp  ObserverUT.cpp  SingletonUT.cpp  facade.cpp  factory.cpp  observer_boost_signal.cpp
tst/dsa/algorithms/: binary_tree.cpp  binary_tree_p.cpp  bubble_sort.cpp  insertion_sort.cpp
tst/dsa/structures/: forward_list.cpp  graph.cpp  map.cpp  set.cpp  stack.cpp  vector.cpp
tst/exercises/: FrequencySortUT.cpp
tst/leet_code/: UniqueCharactersUT.cpp  UniqueNamesUT.cpp  character_filter.cpp  fibonacci.cpp  frequency_sort.cpp  length_of_longest_substring  reverse_string.cpp  unique_characters.cpp  unique_names.cpp
tst/oop_paradigms/: PolymorphismUT.cpp  class.cpp  polymorphism.cpp
tst/parallel_programming/: ConditionVariableUT.cpp  MutexGuardThreadUT.cpp  PromiseFutureUT.cpp  condition_variable.cpp  lock_guard.cpp  mutex_guard_thread.cpp  thread.cpp
tst/synchronization_problems/: livelock.cpp  race_condition.cpp  starvation.cpp
tst/unit_testing/: mocking_demo.cpp
(+291 files in other folders)
